Closed Bug 1668083 Opened 5 years ago Closed 5 years ago

Edited bugzilla bug does not restore correctly

Categories

(Core :: DOM: Navigation, defect, P2)

defect

Tracking

()

RESOLVED FIXED
83 Branch
Fission Milestone M6b
Tracking Status
firefox83 --- fixed

People

(Reporter: neha, Assigned: smaug)

References

Details

Attachments

(1 file)

STR:
With Fission and sessionHistoryInParent enabled, edit a bug on bugzilla and after it completes, restart Nightly. After restart, going back to that bugzilla tab, it tries to reload thee process_bug URL and shows the message of 'No bug selected'. Reloading the page doesn't help because the URL is still wrong.

Randell was able to repro this too.

Fission Milestone: --- → M6b
Assignee: rjesup → peterv

After restart, the page loads https://bugzilla.mozilla.org/process_bug.cgi and the back and forward buttons are disabled/greyed-out.

This makes the test pass, but I think I want to change the actual SessionHistoryEntry, not just modify it.

Assignee: peterv → bugs
Blocks: 1670914
No longer blocks: 1670848
Pushed by opettay@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8af44dcc92c2 when redirecting load from post to get, load should become replacing load also in session history, r=peterv
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
Regressions: 1757458
Regressions: 1787315
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: