Bug 1668083 - when redirecting load from post to get, load should become replacing load also in session history, r=peterv

Differential Revision: https://phabricator.services.mozilla.com/D93249